# ajushi

./: README.md  requirements.txt
arnav_test_world/: pyproject.toml
arnav_test_world/examples/: run_f1_env.py
arnav_test_world/f1_gymnasium/: __init__.py
arnav_test_world/f1_gymnasium/envs/: __init__.py  f1_strategy_env.py
dashboard/: app.py  views.py
dashboard-react/: README.md  SETUP.md  package-lock.json  package.json
dashboard-react/public/: index.html
dashboard-react/src/: App.jsx  index.js  theme.js
dashboard-react/src/components/: LapPace.jsx  Leaderboard.jsx  RaceProgress.jsx  StarField.jsx  TelemetryCard.jsx  TireStatus.jsx  TrackVisualization.jsx
dashboard-react/src/services/: telemetryGenerator.js
dashboard/templates/: dashboard.html
notebooks/: scratch.ipynb
scratch/: agent.py  env_setup.py
src/: agent.py  circular_env.py  dqn.py  env_setup.py  marl_env.py  opt.py  play.py  post_training.py  ppo.py  requirements.txt
src/logs/CarRacing-v3/tensorboard/DQN_1/: events.out.tfevents.1760847843.Abitpals-MacBook-Air.local.8291.0
src/logs/CarRacing-v3/tensorboard/DQN_2/: events.out.tfevents.1760847876.Abitpals-MacBook-Air.local.8410.0
src/logs/CarRacing-v3/tensorboard/DQN_3/: events.out.tfevents.1760847909.Abitpals-MacBook-Air.local.8497.0
src/logs/CarRacing-v3/tensorboard/DQN_4/: events.out.tfevents.1760848188.Abitpals-MacBook-Air.local.8860.0
src/logs/CarRacing-v3/tensorboard/DQN_5/: events.out.tfevents.1760849446.Abitpals-MacBook-Air.local.9955.0
(+4 files in other folders)
