[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1_gymnasium"
version = "0.1.0"
description = "Custom Gymnasium environment for F1 race strategy."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ajushi", email = "dev@example.com" }]
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["f1_gymnasium"]


